Added navigation pannel

--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>ASAP Pizza</title>
+        <title>Tamu Pizza</title>
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/font-awesome.css">
         <link rel="stylesheet" href="css/wickedcss.min.css">
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        
+    <!--top-bar navigation section-->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
+        <h1 id="tamu" class=" ">Ta<span id="tamu-text-end">m</span>u Pi<span id="tamu-text-end">zz</span>a!</h1>
+        <div class="tamu-nav-bar">
+            <ul class="nav-items">
+                <li><a href="#menus">Menu</a></li>
+                <li><a href="#order">Orders</a></li>
+                <li><a href="#contact">Contacts</a></li>
+            </ul>
+        </div>
+    </nav>    
     </body>
 </html>
