Added background image on landing page  section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,22 @@
                 <li><a href="#contact">Contacts</a></li>
             </ul>
         </div>
-    </nav>    
+    </nav>
+    <!--End navigation section-->
+    <div class="landing-page">
+        <div class="overlay">
+            <div id="push"></div>
+            <div class="landing-page-details">
+                <h1 class="text-center text-white "><span class="myPizza">Tamu</span><span class="tamu">Pizza</span></h1>
+                <h2 class=" text-center text-white">Get it hot and sweet as orderd!</h2>
+            </div>
+            <div class="go-button text-center">
+                <a href="#welcome">
+                    <button class="btn bg-info floater  infinite delay-2s">Go</button>
+                </a>
+            </div>
+        </div>
+
+    </div>
     </body>
 </html>
