Added welcome section details

--- a/index.html
+++ b/index.html
@@ -33,7 +33,28 @@
                 </a>
             </div>
         </div>
-
     </div>
+    <!--End landing page section-->
+    <div class="welcome" id="welcome">
+        <br><br><br><br>
+        <div class="col-sm-12">
+            <div class="row">
+                <div class="col-sm-6">
+                    <img src="image/cartoon-cheff.png" alt="chef-cartoon" class="image-karibu">
+                </div>
+                <div class="col-md-6 welcome-details">
+                    <h1 class="text-center txt txt-big">Welcome to <span class="tamu">Tamu Pizza </span></h1>
+                    <p class="text-center txt">The best pizza you'll ever taste</p>
+                    <p class="text-center txt">Order your pizza and we wil deliver it to your location.</p>
+                    <a href="#menus">
+                        <button class="btn bg-info mx-auto d-block menu-btn">Menu</button>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--End welcome section-->
+    
+    
     </body>
 </html>
