Added images on menu section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,28 @@
         </div>
     </div>
     <!--End welcome section-->
-    
+    <div id="menus"></div>
+    <div class="menu col-md-12">
+        <div class="menu-overlay">
+            <h1 class="text-center text-white" id="menu">Menu</h1>
+            <div class="pizza-menu row text-center">
+                <figure class="col-sm-4">
+                    <img src="image/pizza1.png" alt="small-pizza" class="wiggle">
+                    <figcaption class="text-white">Regular<br>Ksh. 350</figcaption>
+                </figure>
+                <figure class="col-sm-4">
+                    <img src="image/pizza2.png" alt="medium-pizza" class="wiggle">
+                    <figcaption class="text-white">Medium<br>Ksh. 650</figcaption>
+                </figure>
+                <figure class="col-sm-4">
+                    <img src="image/pizza3.png" alt="large-pizza" class="wiggle">
+                    <figcaption class="text-white">Large<br>Ksh. 1300</figcaption>
+                </figure>
+            </div>
+        </div>
+    </div>
+
+
     
     </body>
 </html>
