--- a/index.html
+++ b/index.html
@@ -74,6 +74,29 @@
             </div>
         </div>
     </div>
+    <div class="orders" id="order">
+        <h1 class="text-center" id="order-pizza">Order Pizza</h1>
+        <div class="form-group row">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-8 order-overlay text-center">
+                <form class="col-sm-6 offset-sm-3 text-center">
+                    <label>Pick your pizza Flavour:</label>
+                    <select class="custom-select custom-select-md mb-3 flavour" required>
+                        <option value="bbq">BBQ Steak</option>
+                        <option value="boerewors">Boerewors</option>
+                        <option value="hawaiian">Hawaiian</option>
+                        <option value="mushroom">Chicken and Mushroom</option>
+                        <option value="regina">Regina Pizza</option>
+                        <option value="vegtikka">Veg Tikka</option>
+                        <option value="chickentikka">Chicken Tikka</option>
+                        <option value="periperi">Peri-Peri Chicken</option>
+                    </select>
+                </form>
+             </div>
+
+        </div>
+    </div>
+    
 
 
     
