Added select option for pizza size

--- a/index.html
+++ b/index.html
@@ -82,18 +82,19 @@
                 <form class="col-sm-6 offset-sm-3 text-center">
                     <label>Pick your pizza Flavour:</label>
                     <select class="custom-select custom-select-md mb-3 flavour" required>
-                        <option value="bbq">BBQ Steak</option>
-                        <option value="boerewors">Boerewors</option>
-                        <option value="hawaiian">Hawaiian</option>
-                        <option value="mushroom">Chicken and Mushroom</option>
                         <option value="regina">Regina Pizza</option>
                         <option value="vegtikka">Veg Tikka</option>
                         <option value="chickentikka">Chicken Tikka</option>
                         <option value="periperi">Peri-Peri Chicken</option>
                     </select>
+                    <label>Chose your preferred Size:</label>
+                    <select class="custom-select custom-select-md mb-3" id="size" required>
+                        <option value="regular">Regular</option>
+                        <option value="medium">Medium</option>
+                        <option value="large">Large</option>
+                </select>
                 </form>
              </div>
-
         </div>
     </div>
     
