--- a/index.html
+++ b/index.html
@@ -93,6 +93,13 @@
                         <option value="medium">Medium</option>
                         <option value="large">Large</option>
                 </select>
+                <label for="crust">Choose your favorite Crust:</label>
+                <select class="custom-select custom-select-md mb-3" id="crust" required>
+                    <option value="thin">Thin Crust @ Ksh. 100</option>
+                    <option value="thick">Thick Crust @ Ksh. 150</option>
+                    <option value="flatbread">FlatBread Crust @ sh. 180</option>
+                    <option value="custom">Custom Crust @ sh. 280</option>
+                </select>
                 </form>
              </div>
         </div>
