--- a/index.html
+++ b/index.html
@@ -97,9 +97,27 @@
                 <select class="custom-select custom-select-md mb-3" id="crust" required>
                     <option value="thin">Thin Crust @ Ksh. 100</option>
                     <option value="thick">Thick Crust @ Ksh. 150</option>
-                    <option value="flatbread">FlatBread Crust @ sh. 180</option>
-                    <option value="custom">Custom Crust @ sh. 280</option>
+                    <option value="flatbread">FlatBread Crust @ sh. 190</option>
+                    <option value="custom">Custom Crust @ sh. 250</option>
                 </select>
+                <label>Select Your favourite Toppings</label>
+                <select class="custom-select custom-select-md mb-3" id="toppings" required>
+                    <option value="tomato">Tomato @ sh. 100</option>
+                    <option value="onions">Onions @ sh. 100</option>
+                    <option value="mushroom">Mushroom @ sh. 100</option>
+                    <option value="greenpepper">Green Pepper @ sh.100</option>
+                    <option value=""></option>
+                    <option value="olives">Olives @ sh. 150</option>
+                    <option value="pineapple">Pineapple @ sh. 150</option>
+                    <option value="sweetcorn">Sweet Corn @ sh. 150</option>
+                    <option value="macon">Macon @ sh. 150</option>
+                    <option value="mince">Mince @ sh. 150</option>
+                    <option value=""></option>
+                    <option value="beef">Beef Peperoni @ sh. 190</option>
+                    <option value="chicken">Periperi Chicken @ sh. 190</option>
+                </select>
+                <label for="number">Number of Pizza's</label>
+                <input type="number" class="form-control" id="number" placeholder="Number of pizzas" min="1" required>
                 </form>
              </div>
         </div>
