--- a/index.html
+++ b/index.html
@@ -119,7 +119,13 @@
                 <label for="number">Number of Pizza's</label>
                 <input type="number" class="form-control" id="number" placeholder="Number of pizzas" min="1" required>
                 </form>
+                <a href="#summary">
+                    <button type="submit" class="btn btn-success checkout" id="checkout">
+                        Checkout
+                    </button>
+                </a>
              </div>
+             <div class="col-sm-2"></div>
         </div>
     </div>
     
