--- a/index.html
+++ b/index.html
@@ -128,6 +128,12 @@
              <div class="col-sm-2"></div>
         </div>
     </div>
+    <div class="order-summary" id="sum-order">
+        <h1 class="text-center" id="summary">Order Summary</h1>
+        <h2 class="text-center summary">Hello there, your order is as follows:</h2>
+        <ol id="list" class="text-center sum">
+        </ol>
+    </div>
     
 
 
