--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="form-group row">
             <div class="col-sm-2"></div>
             <div class="col-sm-8 order-overlay text-center">
-                <form class="col-sm-6 offset-sm-3 text-center">
+                <form class="col-sm-6 offset-sm-3 text-center " id="myform">
                     <label>Pick your pizza Flavour:</label>
                     <select class="custom-select custom-select-md mb-3 flavour" required>
                         <option value="regina">Regina Pizza</option>
@@ -136,20 +136,30 @@
         <div class="custdata-overlay">
             <div class="row customer-details">
                 <div class="col-sm-3"></div>
-                <form action="" class="form-group col-sm-6 details">
-                    <input type="text" class="form-control custdata" placeholder="Enter your Name:">
-                    <input type="text" class="form-control custdata" placeholder="Enter your phone number: ">
-                    <input type="text" class="form-control custdata" placeholder="Enter the location: ">
-                    <button class="btn bg-info text-center d-block mx-auto go">Make Delivery</button>
-                </form>
-    
+                <form class="col-sm-6 data">
+                    <div class="form-group" >
+                      <label for="formGroupExampleInput">Name</label>
+                      <input type="text" class="form-control mynames" id="formGroupExampleInput" placeholder="Enter Your Name">
+                    </div>
+                    <div class="form-group">
+                      <label for="formGroupExampleInput2">Location</label>
+                      <input type="text" class="form-control mylocations" id="formGroupExampleInput2" placeholder="Enter your Location">
+                    </div>
+                    <button type="submit" onclick="return delivery()" class="btn btn-success" id="order-alert">Check Summary</button>
+                  </form>
                 <div class="col-sm-3"></div>
             </div>
         </div>
         <div class="d-block mx-auto text-center">
             <button class='deliver'>Make Delivery</button>
-            <button class='delivernot'>Pick Up</button>
+            <button onclick="showAlert()" class='delivernot'>Pick Up</button>
         </div>
+        <div class="delivery">
+            <h1 class="text-center" id="online-delivery"> Delivery Summary</h1>
+            <ol class="order">
+
+            </ol>
+        </div> 
     </div>
     <div class="contacts">
         <div class="contact-overlay">
